# universal_robot

sensor_moveit_config/: CMakeLists.txt  package.xml
sensor_moveit_config/config/: sensors_rgbd.yaml
sensor_moveit_config/launch/: kinect2_moveit_sensor_manager.launch.xml  sensor_manager.launch.xml
ur10_moveit_config/launch/: move_group.launch
ur3_moveit_config/launch/: move_group.launch  moveit.rviz
ur5_moveit_config/launch/: move_group.launch  moveit.rviz
ur_description/urdf/: ur3.urdf.xacro
ur_kinematics/src/: ur_kin.cpp
