<?xml version="1.0"?>
<package>
  <name>sensor_moveit_config</name>
  <version>0.0.0</version>
  <description>sensor configuration</description>

  
  <maintainer email="cbc@todo.todo">cbc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros_visualization</build_depend>
  <build_depend>xacro</build_depend>  
  
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros_visualization</run_depend> 
  <run_depend>xacro</run_depend>  
  
</package>

